--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
   <h1>Tip Calculator</h1>
+  <p>Enter the dollar amount and a 15% tip will be generated.</p>
   <form>
     <input type="number" value="100">
     <button type="submit">Calculate tip</button>
